.kubernetes/refsheet-prod-staging.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: refsheet-prod-staging
  labels:
    app: refsheet-prod-staging
    tier: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: refsheet-prod-staging
        tier: frontend
        run: refsheet-prod-staging
      annotations:
        configHash: b6434529026540e58e2751ed60fcfe48ccee9201aa8a9294c7742e58b3a3d66c
    spec:
      volumes:
      - name: refsheet-prod-storage
        secret:
          secretName: refsheet-prod-storage
      containers:
      - name: refsheet-prod-staging
        image: gcr.io/refsheet-239409/refsheet-site:80a8b582838e3080684d39dc421b67323b2e1039
        imagePullPolicy: Always
        livenessProbe:
          periodSeconds: 120
          timeoutSeconds: 120
          httpGet:
            path: /health.json
            port: 3000
            scheme: HTTP
        readinessProbe:
          periodSeconds: 120
          timeoutSeconds: 120
          httpGet:
            path: /health.json
            port: 3000
            scheme: HTTP
        command:
        - bundle
        args:
        - exec
        - rails
        - server
        - -b
        - 0.0.0.0
        - -p
        - "3000"
        volumeMounts:
        - name: refsheet-prod-storage
          mountPath: /secrets/storage
          readOnly: true
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: "0.15"
            memory: 500M
          limits:
            cpu: "0.6"
            memory: 1G
