.kubernetes/refsheet-prod-worker.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: refsheet-prod-worker
  labels:
    app: refsheet-prod
    tier: worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: refsheet-prod
        tier: refsheet-prod-worker
      annotations:
        configHash: b6434529026540e58e2751ed60fcfe48ccee9201aa8a9294c7742e58b3a3d66c
    spec:
      containers:
      - name: refsheet-prod-worker
        image: gcr.io/refsheet-239409/refsheet-site:6df4b2e821323ed8a9935f378b60a2af6528627a
        imagePullPolicy: Always
        command:
        - bundle
        args:
        - exec
        - rake
        - resque:work
        - QUEUE=priority,refsheet_image_processing,refsheet_application_queue
        resources:
          requests:
            cpu: "1"
            memory: 1G
          limits:
            cpu: "2"
            memory: 2G
