.kubernetes/refsheet-prod.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: refsheet-prod
  labels:
    app: refsheet-prod
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: refsheet-prod
        tier: frontend
        run: refsheet-prod
      annotations:
        configHash: 8e0fcc024baaaaefc2835effee4f1095ae25bf68e47755129ea2b9d4010217b1
    spec:
      containers:
      - name: refsheet-prod
        image: gcr.io/refsheet-239409/refsheet-site:5fbd9fc90748a6388f72aebdd8d0245be33a4f35
        imagePullPolicy: Always
        livenessProbe:
          timeoutSeconds: 30
          httpGet:
            path: /health.json
            port: 3000
            scheme: HTTP
        readinessProbe:
          timeoutSeconds: 30
          httpGet:
            path: /health.json
            port: 3000
            scheme: HTTP
        command:
        - bundle
        args:
        - exec
        - rails
        - server
        - -b
        - 0.0.0.0
        - -p
        - "3000"
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: "0.15"
            memory: 500M
          limits:
            cpu: "0.6"
            memory: 1G
