.kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: refsheet-prod-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: refsheet-prod-ip
    networking.gke.io/managed-certificates: "com-refsheet,com-refsheet-kube,st-ref,com-refsheet-staging"
spec:
  rules:
    - host: staging.refsheet.net
      http:
        paths:
          - backend:
              serviceName: refsheet-prod-staging
              servicePort: 80
    - host:
      http:
        paths:
          - backend:
              serviceName: refsheet-prod
              servicePort: 80
